fix menu not showing up in small screen bug

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -42,7 +42,7 @@
   }
 
   .menu-branding {
-    height: 25;
+    height: 25vh;
     transform: translate3d(100%, 0, 0);
     .portrait {
       background: url("../img/portrait_small.jpg");
@@ -69,8 +69,16 @@
 
 //smartphone
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
   }
 
   .projects {
